--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,5 +1,5 @@
 cmake_minimum_required(VERSION 3.10.0)
-project(opencvtest VERSION 0.1.0 LANGUAGES C CXX)
+project(greentrack VERSION 0.1.0 LANGUAGES C CXX)
 
 set(CMAKE_CXX_STANDARD 17)
 include_directories(${PROJECT_SOURCE_DIR}/include)
@@ -10,6 +10,6 @@ include_directories(${OpenCV_INCLUDE_DIRS})
 find_package(PkgConfig REQUIRED)
 pkg_check_modules(GPIOD REQUIRED IMPORTED_TARGET libgpiod)
 
-add_executable(opencvtest src/main.cpp src/my_kalman.cpp src/start_detect.cpp src/detect_cuda.cpp src/serial_port.cpp src/gpio.cpp)
-target_link_libraries(opencvtest ${OpenCV_LIBS})
-target_link_libraries(opencvtest PkgConfig::GPIOD)
+add_executable(greentrack src/main.cpp src/my_kalman.cpp src/start_detect.cpp src/detect_cuda.cpp src/serial_port.cpp src/gpio.cpp)
+target_link_libraries(greentrack ${OpenCV_LIBS})
+target_link_libraries(greentrack PkgConfig::GPIOD)
